overlay fixed to fit over bg image behind text. padding for columns fixed. buttons on hover change shadow to less padding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,19 +14,48 @@ body {
     margin: 0 auto;
 }
 
-.main-container {
-    text-align: center;
-    /* padding: 8px; */
+#overlay {
     background: rgba(0, 0, 0, 0.301);
     background-size: cover;
-    top: 25%;
-    padding: 0px 100px 15px 100px;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
+.main-container {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    /* padding: 8px; */
+    /* background: rgba(0, 0, 0, 0.301);
+    background-size: cover; */
+    /* top: 25%; */
+    padding: 80px;
     /* margin: 0 auto;
     width: 75%;
     align-content: center;
     align-self: center;
     align-items: center;
     left: 50%; */
+}
+
+#overlay-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: white;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    padding: 25px;
+    text-align: center;
+    width: 75%;
+    height: 100%;
+    margin-top: 25px;
 }
 
 h1 {
@@ -55,7 +84,7 @@ h3 {
 .text-content {
     color: white;
     font-family: 'Unica One', cursive;
-    font-size: 24px;
+    font-size: 28px;
     font-weight: 600;
     /* font-family: 'Shadows Into Light Two', cursive; */
     -webkit-column-count: 5; /* Chrome, Safari, Opera */
@@ -71,11 +100,12 @@ h3 {
     -moz-column-rule-width: 1px; /* Firefox */
     column-rule-width: 1px;
     color: white;
-    padding: 0px 100px 15px 100px;
+    padding: 15px;
     margin: 0 auto;
   }
 
 .buttons {
+    margin-top: 20px;
     /* margin-left: 25%; */
     /* width: 100%;
     left: 25px;
@@ -94,10 +124,14 @@ h3 {
     border-style: solid;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     /* display: inline-block; */
-    margin: 4px 5px;
+    margin: 15px;
     cursor: pointer;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
+}
+.vectorBtn:hover{
+    box-shadow: 0 4px 10px 0 rgba(0,0,0,0.4), 0 3px 15px 0 rgba(0,0,0,0.30);
+
 }
 
 #redBtn {
